Fix arch tests